bodhi-aws-main/deployment/distribution/kubecost-resources/kubecost-kubeflow-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubecost
  namespace: monitoring

spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - console.bodhimlops.xyz
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /kubecost
      match:
        - uri:
            prefix: /kubecost/
      rewrite:
        uri: /
      route:
        - destination:
            host: kubecost-cost-analyzer.monitoring.svc.cluster.local
            port:
              number: 9090
