bodhi-aws-main/deployment/distribution/kubecost-resources/kubecost-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubecost
  namespace: monitoring
spec:
  gateways:
    - monitoring-gateway
  hosts:
    - kubecost.bodhimlops.xyz
  http:
    - route:
        - destination:
            host: kubecost-cost-analyzer.monitoring.svc.cluster.local
            port:
              number: 9090
